hphp/hack/test/typecheck/errors/2112-call_assert.php
<?hh // strict

function foo(): void {
  assert(true);
}
